--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,18 +1,23 @@
 {
-  "manifest_version": 2,
-  "name": "__MSG_extName__",
-  "homepage_url": "http://localhost:8080/",
-  "description": "A Vue Browser Extension",
-  "default_locale": "en",
-  "permissions": [
-    "<all_urls>",
-    "*://*/*"
-  ],
+  "name": "Badger",
+  "description": "__MSG_manifestDesc__",
+  "homepage_url": "https://github.com/biggestcookie/Badger",
+  "developer": {
+    "name": "bigcookie",
+    "url": "https://github.com/biggestcookie"
+  },
   "icons": {
     "16": "icons/16.png",
     "48": "icons/48.png",
     "128": "icons/128.png"
   },
+  "permissions": [
+    "alarms",
+    "notifications",
+    "storage"
+  ],
+  "default_locale": "en",
+  "manifest_version": 2,
   "background": {
     "scripts": [
       "js/background.js"
@@ -21,7 +26,7 @@
   },
   "browser_action": {
     "default_popup": "popup.html",
-    "default_title": "__MSG_extName__",
+    "default_title": "Badger",
     "default_icon": {
       "19": "icons/19.png",
       "38": "icons/38.png"
