--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,8 @@
 {
   "name": "Badger",
   "description": "__MSG_manifestDescription__",
+  "author": "bigcookie",
   "homepage_url": "https://github.com/biggestcookie/Badger",
-  "developer": {
-    "name": "bigcookie",
-    "url": "https://github.com/biggestcookie"
-  },
   "icons": {
     "16": "icons/16.png",
     "48": "icons/48.png",
@@ -34,6 +31,8 @@
   },
   "options_ui": {
     "page": "options.html",
-    "browser_style": true
-  }
+    "open_in_tab": true,
+    "chrome_style": false
+  },
+  "incognito": "spanning"
 }
