--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,28 +3,20 @@
 	"tasks": [
 		{
 			"type": "npm",
-			"script": "build-dev",
+			"script": "serve",
+			"problemMatcher": "$tsc-watch",
+			"group": "build",
+			"label": "npm: serve",
+			"detail": "vue-cli-service build --mode development --watch"
+		},
+		{
+			"type": "npm",
+			"script": "build",
 			"problemMatcher": "$tsc",
 			"group": {
 				"kind": "build",
 				"isDefault": true
 			},
-			"label": "npm: build-dev",
-			"detail": "vue-cli-service build"
-		},
-		{
-			"type": "npm",
-			"script": "serve",
-			"problemMatcher": "$tsc-watch",
-			"group": "build",
-			"label": "npm: serve",
-			"detail": "vue-cli-service build"
-		}
-		{
-			"type": "npm",
-			"script": "build",
-			"problemMatcher": "$tsc",
-			"group": "build",
 			"label": "npm: build",
 			"detail": "vue-cli-service build"
 		}
