--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service build --mode development --watch",
     "build": "vue-cli-service build",
-    "build-dev": "vue-cli-service build --mode development",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-dev": "vue-cli-service build --mode development"
   },
   "dependencies": {
+    "@vue/compiler-sfc": "^3.0.4",
     "bulma": "^0.9.1",
     "chrome-extension-async": "^3.4.1",
     "core-js": "^3.6.5",
     "ionicons": "^5.1.2",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2"
+    "vue": "^3.0.4",
+    "vue-class-component": "^8.0.0-rc.1",
+    "vue-router": "^4.0.1"
   },
   "devDependencies": {
     "@types/chrome": "0.0.124",
@@ -24,7 +25,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.9",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
@@ -34,8 +35,7 @@
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-cli-plugin-browser-extension": "^0.25.0",
-    "vue-template-compiler": "^2.6.11",
+    "vue-cli-plugin-browser-extension": "^0.25.1",
     "webextension-polyfill-ts": "^0.20.0"
   },
   "eslintConfig": {
@@ -56,7 +56,8 @@
     "rules": {
       "@typescript-eslint/explicit-function-return-type": "off",
       "@typescript-eslint/no-explicit-any": "off",
-      "@typescript-eslint/no-unused-vars": "off"
+      "@typescript-eslint/no-unused-vars": "off",
+      "vue/no-multiple-template-root": "off"
     }
   },
   "browserslist": [
