--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.tabSize": 2,
+    "typescript.tsdk": "node_modules\\typescript\\lib",
     "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     }
