--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build-dev": "vue-cli-service build --mode development"
   },
   "dependencies": {
-    "@vue/compiler-sfc": "^3.0.5",
     "bulma": "^0.9.1",
     "chrome-extension-async": "^3.4.1",
     "core-js": "^3.8.2",
@@ -25,6 +24,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "^4.5.9",
+    "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
@@ -43,7 +43,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/vue3-essential",
       "eslint:recommended",
       "@vue/typescript/recommended",
       "@vue/prettier",
