--- a/package.json
+++ b/package.json
@@ -3,39 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service build --mode development --watch",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build-dev": "vue-cli-service build --mode development"
+    "build": "vite build"
   },
   "dependencies": {
-    "bulma": "^0.9.1",
+    "@types/node": "^15.12.4",
+    "@vitejs/plugin-vue": "^1.2.3",
+    "@vue/compiler-sfc": "^3.0.8",
+    "@vuedx/typecheck": "^0.7.4",
+    "@vuedx/typescript-plugin-vue": "^0.7.4",
+    "bulma": "^0.9.3",
     "chrome-extension-async": "^3.4.1",
-    "core-js": "^3.8.2",
     "ionicons": "^5.3.0",
+    "sass": "^1.35.1",
+    "typescript": "~3.9.3",
+    "vite": "^2.3.8",
+    "vite-plugin-chrome-extension": "^0.0.7",
     "vue": "^3.0.5",
     "vue-class-component": "^8.0.0-rc.1",
-    "vue-router": "^4.0.2"
+    "vue-router": "^4.0.2",
+    "webextension-polyfill-ts": "^0.25.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "^4.5.9",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
-    "vue-cli-plugin-browser-extension": "^0.25.1",
-    "webextension-polyfill-ts": "^0.20.0"
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^7.29.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.11.1",
+    "prettier": "^1.19.1"
   },
   "eslintConfig": {
     "root": true,
@@ -43,11 +39,11 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
       "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:vue/vue3-essential",
       "@vue/typescript/recommended",
-      "@vue/prettier",
-      "@vue/prettier/@typescript-eslint"
+      "prettier"
     ],
     "parserOptions": {
       "ecmaVersion": 2020
