--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,30 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "esnext",
     "module": "esnext",
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
-    "experimentalDecorators": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
     "sourceMap": true,
+    "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
+      "/@/*": [
         "src/*"
       ]
     },
     "lib": [
-      "es6",
-      "ES2017.Object",
+      "esnext",
       "dom",
       "dom.iterable",
       "scripthost"
+    ],
+    "types": [
+      "vite/client",
     ]
   },
   "include": [
