--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   },
   "dependencies": {
     "bulma": "^0.9.4",
-    "chrome-extension-async": "^3.4.1",
     "ionicons": "^6.0.4",
     "sass": "^1.56.1",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
-    "webextension-polyfill": "^0.10.0"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^2.0.0-beta.9",
     "@types/node": "^18.11.0",
     "@types/webextension-polyfill": "^0.9.2",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -22,13 +21,13 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "chrome-types": "^0.1.154",
     "eslint": "^8.29.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.8.0",
     "prettier": "^2.8.0",
     "typescript": "~4.9.3",
     "vite": "^3.2.4",
-    "vite-plugin-chrome-extension": "^0.0.7",
     "vue-tsc": "^1.0.10"
   },
   "prettier": {
